# learn_pylib-project

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.rst  pyproject_ops.json  setup.py
.github/workflows/: main.yml
docs/: Makefile  make.bat
docs/source/: conf.py
docs/source/abc/: index.ipynb
docs/source/amazon_ion/: index.ipynb  jump_to_source_code.py
docs/source/asciinema/: index.rst
docs/source/avro/: index.rst
docs/source/blessed/: index.rst
docs/source/boto_session_manager/: index.rst
docs/source/contextlib/: index.rst  test_contextmanager_1.py  test_contextmanager_2.py  test_contextmanager_3.py
docs/source/cookiecutter/: .gitignore  index.rst
docs/source/cookiecutter/example3/{{ cookiecutter.package_name | slugify }}-project/: pyproject.toml
docs/source/dataclasses/: index.rst
docs/source/decorator/: index.rst
docs/source/diskcache/: index.ipynb
docs/source/dynamodb_json/: example.py  index.rst
docs/source/fire/: basic_usage.py  index.rst  subcommand_example1.py  subcommand_example2.py
docs/source/flask-restless/: index.rst  requirements.txt
docs/source/fsspec/: index.rst
docs/source/functools/: cached_property_remove_cache.py  index.rst
docs/source/googleapiclient_gdrive/: index.rst  test_gdrive_client.py
docs/source/googleapiclient_gmail/: index.rst  test_gmail_client.py
docs/source/inquirer/: index.rst  main.py
docs/source/jmespath/: index.ipynb  index.rst
docs/source/learn_pylib/: __init__.rst  api.rst
docs/source/loguru/: index.rst  multiple_sink.py
tests/: all.py  test_api.py
(+116 files in other folders)
