[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1.1"
description = "..."
license = "{{ cookiecutter.license }}"
license-files = ["LICENSE.txt", "AUTHORS.rst"]
authors = [
    { name = "Alice", email = "alice@email.com" }, # author
]
maintainer = [
    { name = "Alice", email = "alice@email.com" }, # maintainer
]
readme = "README.rst"
requires-python = ">=3.9,<4.0"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
